// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefinementList renders markup with state 1`] = `
<ng-ais-refinement-list
  cx={[Function Function]}
  limitMin={[Function Number]}
  operator={[Function String]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  searchPlaceholder={[Function String]}
  searchQuery=""
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-RefinementList"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-RefinementList-header ais-"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-RefinementList-body ais-body"
    >
      
          
      
      
  
          
      <ul
        class="ais-RefinementList-list"
      >
        
            
        
        <li
          class="ais-RefinementList-item"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
              value="foo"
            />
            
                
            <ng-ais-highlight
              attributename="highlighted"
              ng-reflect-attribute-name="highlighted"
              ng-reflect-hit="[object Object]"
            >
              <span>
                foo
              </span>
            </ng-ais-highlight>
            
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-item"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
              value="bar"
            />
            
                
            <ng-ais-highlight
              attributename="highlighted"
              ng-reflect-attribute-name="highlighted"
              ng-reflect-hit="[object Object]"
            >
              <span>
                bar
              </span>
            </ng-ais-highlight>
            
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-item"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
              value="foobar"
            />
            
                
            <ng-ais-highlight
              attributename="highlighted"
              ng-reflect-attribute-name="highlighted"
              ng-reflect-hit="[object Object]"
            >
              <span>
                foobar
              </span>
            </ng-ais-highlight>
            
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-item"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
              value="barfoo"
            />
            
                
            <ng-ais-highlight
              attributename="highlighted"
              ng-reflect-attribute-name="highlighted"
              ng-reflect-hit="[object Object]"
            >
              <span>
                barfoo
              </span>
            </ng-ais-highlight>
            
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-RefinementList-footer ais-"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-refinement-list>
`;

exports[`RefinementList renders markup without state 1`] = `
<ng-ais-refinement-list
  cx={[Function Function]}
  limitMin={[Function Number]}
  operator={[Function String]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  searchPlaceholder={[Function String]}
  searchQuery=""
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-RefinementList"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-RefinementList-header ais-"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-RefinementList-body ais-body"
    >
      
          
      
      
  
          
      <ul
        class="ais-RefinementList-list"
      >
        
            
        
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-RefinementList-footer ais-"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-refinement-list>
`;

exports[`RefinementList should apply \`transformItems\` if specified 1`] = `
<ng-ais-refinement-list
  cx={[Function Function]}
  limitMin={[Function Number]}
  operator={[Function String]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  searchPlaceholder={[Function String]}
  searchQuery=""
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  transformItems={[Function Function]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-RefinementList"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-RefinementList-header ais-"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-RefinementList-body ais-body"
    >
      
          
      
      
  
          
      <ul
        class="ais-RefinementList-list"
      >
        
            
        
        <li
          class="ais-RefinementList-item"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
              value="foo"
            />
            
                
            <ng-ais-highlight
              attributename="highlighted"
              ng-reflect-attribute-name="highlighted"
              ng-reflect-hit="[object Object]"
            >
              <span>
                transformed - foo
              </span>
            </ng-ais-highlight>
            
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-itemais-RefinementList-item--selected"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
              value="bar"
            />
            
                
            <ng-ais-highlight
              attributename="highlighted"
              ng-reflect-attribute-name="highlighted"
              ng-reflect-hit="[object Object]"
            >
              <span>
                transformed - bar
              </span>
            </ng-ais-highlight>
            
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-item"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
              value="foobar"
            />
            
                
            <ng-ais-highlight
              attributename="highlighted"
              ng-reflect-attribute-name="highlighted"
              ng-reflect-hit="[object Object]"
            >
              <span>
                transformed - foobar
              </span>
            </ng-ais-highlight>
            
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        <li
          class="ais-RefinementList-item"
        >
          
              
          <label
            class="ais-RefinementList-label"
          >
            
                
            <input
              class="ais-RefinementList-checkbox"
              type="checkbox"
              value="barfoo"
            />
            
                
            <ng-ais-highlight
              attributename="highlighted"
              ng-reflect-attribute-name="highlighted"
              ng-reflect-hit="[object Object]"
            >
              <span>
                transformed - barfoo
              </span>
            </ng-ais-highlight>
            
                
            <span
              class="ais-RefinementList-count"
            >
              
                  100
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-RefinementList-footer ais-"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-refinement-list>
`;
